Fix carousel overflow-x issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -651,7 +651,7 @@ i:hover {
 }
 
 .carousel-inner {
-  overflow: visible;
+  /* overflow: visible; */
 }
 
 /*Carousel Indicator Styling */
